# bitflate-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
bitflate-rs-macros/: Cargo.toml
bitflate-rs-macros/src/: bitflaters.rs  lib.rs  podflaters.rs
examples/: bitpacked_demo.rs  complex_nested_demo.rs  layout_demo.rs  podflate_demo.rs
src/: lib.rs
tests/: macros.rs
