[package]
name = "bitflate-rs"
version = "0.1.87"
edition = "2021"
author = "BlankMauser"
license = "MIT"
description = "Layout/bitfield helpers for previewing structs"
readme = "README.md"

[workspace]
members = ["bitflate-rs-macros"]

[features]
default = ["bilge"]
bilge = ["dep:bilge"]
podflate = ["dep:bytemuck"]

[dependencies]
bilge = { version = "0.3.0", optional = true }
bytemuck = { version = "1.18.0", features = ["derive"], optional = true }
bitflate-rs-macros = { path = "bitflate-rs-macros", version = "0.1.84" }
